# sand_framework

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  dump.rdb  errors.md  pyproject.toml  requirements-dev.txt  requirements.txt  results.md  rules.windsurfrules  rules2.windsurfrules  run.py  scan_contract.py  setup.py
.github/workflows/: ci-cd.yml  ci.yml
agents/: Dockerfile  analytics_agent.py  llm_client.py  tasks.py  web3_agent.py
agents/contract_analysis/: analyzer.py  code_quality.py  gas_optimizer.py  metrics.py  security_scanner.py
api_gateway/: Dockerfile  db.py  main.py
api_gateway/core/: config.py  logging_config.py  metrics.py  monitoring.py  queue.py  rate_limit.py  security.py  validation.py
api_gateway/models/: database.py  metrics.py  models.py  schemas.py
api_gateway/routes/: analytics.py  devagent.py  metrics.py  system.py
api_gateway/services/: __init__.py  analytics.py  contract_analysis.py  market.py  project_manager.py
api_gateway/tasks/: contract_analysis.py
discord_bot/: Dockerfile  bot.py
docs/: README.md  SUMMARY.md  api.md  architecture.md  deployment.md  readme2.md.backup  testing.md
docs/development/: architecture.md  contributing.md  project-structure.md
docs/features/: ai-copilot.md  analytics.md  api-gateway.md  contract-analysis.md  discord-bot.md
docs/getting-started/: configuration.md  quick-start.md
docs/resources/: acknowledgements.md  faq.md
tests/: conftest.py  locustfile.py  test_agents.py
venv_py312/: pyvenv.cfg
(+27 files in other folders)
